# DashExamples

./: .gitignore  README.md  SPEC.md  example1.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: a2_local.yaml
docs/: snellius.md
papers/: Ma2025pdf  Zhang2026pdf
scripts/: precompute_queries.py  smoke_local.py
scripts/slurm/: caption_ocr.slurm  compress_events.slurm  embed_video.slurm  preprocess_aux.slurm
src/castlerag/: cli.py  config.py  schemas.py
src/castlerag/dataset/: layout.py  manifest.py  metadata.py  transcripts.py
src/castlerag/embed/: omniembed.py
src/castlerag/eval/: __init__.py  io.py  run_eval.py
src/castlerag/generation/: answer.py
src/castlerag/index/: __init__.py  io.py  pipeline.py  qdrant.py  transcript_lexical.py
src/castlerag/preprocess/: aux_link.py  auxiliary.py  caption_ocr.py  event_compress.py  media.py  visual_summary.py  windows.py
src/castlerag/rerank/: llm_reranker.py
src/castlerag/retrieval/: __init__.py  candidate_expand.py  filters.py  search.py  transcript_lexical.py
src/castlerag/routing/: question_router.py
src/castlerag/training/: lora_mcqa.py
tests/unit/: test_aux_link.py  test_cli.py  test_config.py  test_eval_io.py  test_generation.py  test_indexing.py  test_layout.py  test_manifest.py  test_preprocessing.py  test_reranker.py  test_retrieval.py  test_router.py  test_schemas.py
