[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "castlerag"
version = "0.1.0"
description = "Multimodal RAG for verifiable QA over the CASTLE 2024 dataset (EgoVis 2026)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "qdrant-client>=1.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "orjson>=3.9",
]

[project.scripts]
castlerag = "castlerag.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]
# GPU inference stack — install separately on Snellius or a GPU host
inference = [
    "torch>=2.3",
    "transformers>=4.43",
    "vllm>=0.5",
    "accelerate>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/castlerag"]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "castlerag/configs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
